kubernetes/Jenkins/jenkinsservice2.yaml
#use first service.yaml only 
apiVersion: v1
kind: Service
metadata:
 name: jenkins
spec:
 type: NodePort
 selector:
   app.kubernetes.io/component: jenkins-controller
 ports:
   - name: http
     port: 8080
     targetPort: 8080
   - name: agent
     port: 50000
     targetPort: 50000
