kubernetes/Jenkins/jenkinsingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  # Rewrite target to root
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /jenkins
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 80
